--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -62,6 +62,9 @@ nav .main_nav li .active:active {
 }
 
 @media screen and (max-width: 834px) {
+  nav .logo svg {
+    margin-left: 0;
+  }
   .overflow-toggle {
     overflow: hidden;
   }
